@@ -4,6 +4,11 @@ Changelog
 1.2 - Unreleased
 ----------------
 
+* Changed the `maintenance/reindex` method to only flush data to Solr but not
+  commit after each batch. Instead we only commit once at the end. You should
+  configure auto commit policies on the Solr server side.
+  [hannosch]
+
 * Adjusted the `mangleQuery` function to calculate extended path indexes from
   the Solr schema instead of hardcoding `path`. You need to provide indexers
   with the same three suffixes as we do ourselves in the `attributes` module
